# sroloc

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
examples/: color_themes.py
src/sroloc/: __init__.py
src/sroloc/color/: __init__.py  ansi.py  bank.py  true.py  utils.py
src/sroloc/printing/: color_injector.py  color_segment.py  modifiers.py
tests/: test_color_bank.py  test_color_segment.py  test_rgb_color.py
