[metadata]
name = sroloc
description = Yet another Python library for making your terminal output colorful, designed for humans
long_description = file: README.md
author = 8ru73u5
url = https://github.com/8ru73u5/sroloc
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
keywords = color, colors, terminal, shell
classifiers =
  Environment :: Console
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: Unix
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: System :: Shells
  Topic :: Terminals
  Topic :: Utilities
  Typing :: Typed

[options]
packages =
  sroloc
package_dir =
  =src
python_requires = >=3.6
zip_safe = no

[options.extras_require]
testing =
  flake8>=4.0
  mypy>=0.94
  pytest>=7.1
  pytest-cov>=3.0

[options.package_data]
sroloc = py.typed
